feat(ci): configure workflows to run on master branch
- Update ci.yml to trigger on master branch instead of main/develop
- Update api-consistency-check.yml to trigger on master branch instead of main/develop
- Maintain all existing functionality including PR checks and scheduled runs
- Ensure workflows align with current branch structure where master is the development branch

--- a/Qdrant_Insertor/.github/workflows/api-consistency-check.yml
+++ b/Qdrant_Insertor/.github/workflows/api-consistency-check.yml
@@ -2,9 +2,9 @@ name: API Consistency Check
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ master ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ master ]
   schedule:
     # 每天UTC 02:00运行（北京时间10:00）
     - cron: '0 2 * * *'
