fix(typescript): resolve all TypeScript compilation errors
- Fix type issues in DocumentDetail.tsx with response.data handling
- Fix type issues in useBatchUpload.ts with progress state management
- Fix missing imports and type annotations across frontend components
- Ensure all components compile without TypeScript errors
- Verify entire project builds successfully

--- a/Qdrant_Insertor/packages/backend/package.json
+++ b/Qdrant_Insertor/packages/backend/package.json
@@ -11,7 +11,8 @@
     "format": "prettier --write \"src/**/*.ts\"",
     "format:check": "prettier --check \"src/**/*.ts\"",
     "lint": "npx eslint \"src/**/*.ts\"",
-    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js"
+    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
+    "clean-build" : "tsc --build --clean"
   },
   "dependencies": {
     "@qdrant/js-client-rest": "^1.15.0",
