--- a/Qdrant_Insertor/packages/frontend/package.json
+++ b/Qdrant_Insertor/packages/frontend/package.json
@@ -10,30 +10,34 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,css,md}\"",
+    "clean-build" : "npx rimraf dist && tsc --build --clean",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "clsx": "^1.2.1",
+    "lucide-react": "^0.323.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "axios": "^1.3.4",
-    "zustand": "^4.3.6",
-    "lucide-react": "^0.323.0",
-    "clsx": "^1.2.1"
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.38.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@eslint/js": "^9.38.0",
-    "@eslint/eslintrc": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "globals": "^16.3.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
   }
