--- a/Qdrant_Insertor/packages/frontend/package.json
+++ b/Qdrant_Insertor/packages/frontend/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,css,md}\"",
-    "clean-build" : "npx rimraf dist && tsc --build --clean",
+    "clean-build": "npx rimraf dist && tsc --build --clean",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
@@ -19,7 +19,9 @@
     "lucide-react": "^0.323.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.8.1",
+    "remark-gfm": "^4.0.1",
     "zustand": "^4.3.6"
   },
   "devDependencies": {
