--- a/Qdrant_Insertor/packages/backend/package.json
+++ b/Qdrant_Insertor/packages/backend/package.json
@@ -20,6 +20,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/winston": "^2.4.4",
     "better-sqlite3": "^12.2.0",
+    "cheerio": "^1.1.2",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "formdata-node": "^6.0.3",
@@ -27,8 +28,10 @@
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "openai": "^5.16.0",
+    "undici": "^6.20.1",
     "uuid": "^11.1.0",
     "winston": "^3.18.3",
+    "winston-daily-rotate-file": "^4.7.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
