--- a/Qdrant_Insertor/packages/frontend/package.json
+++ b/Qdrant_Insertor/packages/frontend/package.json
@@ -4,14 +4,15 @@
   "description": "Qdrant MCP RAG Frontend",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "dev:serve": "vite",
+    "dev:preview": "vite preview",
+    "build:compile": "npx tsc --noEmit && vite build",
+    "build:check": "tsc --noEmit",
+    "lint:check": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
-    "format": "prettier --write \"src/**/*.{ts,tsx,css,md}\"",
-    "clean-build": "npx rimraf dist && tsc --build --clean",
-    "type-check": "tsc --noEmit"
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,css,md}\"",
+    "format:fix": "prettier --write \"src/**/*.{ts,tsx,css,md}\"",
+    "clean:build": "npx rimraf dist && tsc --build --clean"
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -27,6 +28,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.38.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
@@ -37,9 +40,13 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "globals": "^16.3.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "jest-html-reporters": "^3.1.7",
+    "jest-junit": "^16.0.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.0",
+    "ts-jest": "^29.4.5",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
   }
