chore(repo): 文档与根级配置更新，补充测试与共享包配置

--- a/Qdrant_Insertor/shared/package.json
+++ b/Qdrant_Insertor/shared/package.json
@@ -20,10 +20,11 @@
     }
   },
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
-    "clean": "rm -rf dist",
-    "type-check": "tsc --noEmit"
+    "dev:watch": "tsc --watch",
+    "build:compile": "npx tsc --build",
+    "build:check": "tsc --noEmit",
+    "clean:build": "tsc --build --clean",
+    "clean:dist": "rm -rf dist"
   },
   "devDependencies": {
     "typescript": "^5.0.2"
