--- a/Qdrant_Insertor/package.json
+++ b/Qdrant_Insertor/package.json
@@ -9,39 +9,61 @@
     "shared"
   ],
   "scripts": {
-    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
-    "dev:backend": "npm run dev --workspace=packages/backend",
-    "dev:frontend": "npm run dev --workspace=packages/frontend",
-    "build": "npm run build --workspaces",
-    "build:backend": "npm run build --workspace=packages/backend",
-    "build:frontend": "npm run build --workspace=packages/frontend",
-    "build:shared": "npm run build --workspace=shared",
-    "lint": "npm run lint --workspaces",
+    "dev:serve": "concurrently \"npm run dev:serve --workspace=packages/backend\" \"npm run dev:serve --workspace=packages/frontend\"",
+    "dev:backend": "npm run dev:watch --workspace=packages/backend",
+    "dev:frontend": "npm run dev:serve --workspace=packages/frontend",
+    "build:all": "npm run build:compile --workspaces",
+    "build:backend": "npm run build:compile --workspace=packages/backend",
+    "build:frontend": "npm run build:compile --workspace=packages/frontend",
+    "build:shared": "npm run build:compile --workspace=shared",
+    "lint:check": "npm run lint --workspaces",
     "lint:fix": "npm run lint:fix --workspaces",
-    "format": "prettier --write \"packages/**/*.{ts,tsx,js,jsx,css,md}\" \"shared/**/*.{ts,js,md}\"",
-    "type-check": "npm run type-check --workspaces",
-    "clean": "npm run clean --workspaces && rm -rf node_modules",
+    "format:fix": "prettier --write \"packages/**/*.{ts,tsx,js,jsx,css,md}\" \"shared/**/*.{ts,js,md}\"",
+    "format:check": "prettier --check \"packages/**/*.{ts,tsx,js,jsx,css,md}\" \"shared/**/*.{ts,js,md}\"",
+    "build:check": "npm run build:check --workspaces",
+    "clean:all": "npm run clean --workspaces && rm -rf node_modules",
     "install:all": "npm install && npm run build:shared",
-    "test": "npm run test --workspaces",
+    "test:all": "npm run test:unit --workspace=packages/backend",
+    "test:coverage": "npm run test:coverage --workspace=packages/backend",
+    "test:coverage:check": "npm run test:coverage:check --workspace=packages/backend",
+    "test:coverage:report": "npm run test:coverage:report --workspace=packages/backend",
+    "test:quality-gate": "npm run test:coverage:check",
     "test:api-consistency": "node tests/api-consistency-check.test.js",
-    "check-lines" : "npm run format && node ./Scripts/check-lines.js",
-    "check-openapi" : "redocly lint docs/apis/openapi.yaml",
-    "bundle-openapi" : "redocly bundle docs/apis/openapi.yaml --output docs/apis/bundled.yaml",
+    "check-lines": "npm run format:fix && node ./Scripts/check-lines.js",
+    "api:validate": "redocly lint docs/apis/openapi.yaml",
+    "docs:bundle": "redocly bundle docs/apis/openapi.yaml --output docs/apis/bundled.yaml",
     "api:check": "node scripts/api-consistency-check.js",
     "api:check:verbose": "node scripts/api-consistency-check.js --verbose",
     "api:check:watch": "node scripts/api-consistency-check.js --watch",
     "api:check:fix": "node scripts/api-consistency-check.js --fix",
-    "pre-commit": "npm run api:check && npm run lint && npm run test",
-    "validate:api": "npm run check-openapi && npm run api:check"
+    "pre-commit": "npm run api:check && npm run lint:check && npm run test:quality-gate",
+    "validate:api": "npm run api:validate && npm run api:check",
+    "validate:quality": "npm run lint:check && npm run test:quality-gate",
+    "clean:build": "npm run clean:build --workspaces",
+    "clean:coverage": "npm run clean:coverage --workspace=packages/backend",
+    "docs:generate": "node scripts/generate-openapi.js",
+    "docs:validate": "node scripts/generate-openapi.js --validate",
+    "docs:preview": "node scripts/generate-openapi.js --preview",
+    "docs:all": "npm run docs:generate && npm run docs:validate && npm run docs:bundle",
+    "codegen:types": "node scripts/generate-codegen.js --types",
+    "codegen:api": "node scripts/generate-codegen.js --api",
+    "codegen:graphql": "node scripts/generate-codegen.js --graphql",
+    "codegen:statecharts": "node scripts/generate-codegen.js --statecharts",
+    "codegen:all": "node scripts/generate-codegen.js --all"
   },
   "devDependencies": {
-    "concurrently": "^8.2.0",
-    "prettier": "^3.6.2",
-    "typescript": "^5.0.2",
-    "js-yaml": "^4.1.0",
-    "jest": "^29.7.0",
+    "@graphql-codegen/cli": "^5.0.7",
+    "@graphql-codegen/typescript": "^4.1.6",
+    "@graphql-codegen/typescript-graphql-request": "^6.3.0",
+    "@graphql-codegen/typescript-operations": "^4.6.1",
     "@types/jest": "^29.5.5",
-    "@types/js-yaml": "^4.0.5"
+    "@types/js-yaml": "^4.0.5",
+    "concurrently": "^8.2.0",
+    "jest": "^29.7.0",
+    "js-yaml": "^4.1.0",
+    "openapi-typescript": "^6.7.6",
+    "prettier": "^3.6.2",
+    "typescript": "^5.0.0"
   },
   "engines": {
     "node": ">=18.0.0",
