--- a/Qdrant_Insertor/package.json
+++ b/Qdrant_Insertor/package.json
@@ -24,10 +24,13 @@
     "clean:all": "npm run clean --workspaces && rm -rf node_modules",
     "install:all": "npm install && npm run build:shared",
     "test:all": "npm run test:unit --workspace=packages/backend",
+  "test:backend:e2e-golden": "npm run test:e2e-golden --workspace=packages/backend",
     "test:coverage": "npm run test:coverage --workspace=packages/backend",
     "test:coverage:check": "npm run test:coverage:check --workspace=packages/backend",
+    "test:coverage:enhanced": "npm run test:coverage:enhanced --workspace=packages/backend",
     "test:coverage:report": "npm run test:coverage:report --workspace=packages/backend",
-    "test:quality-gate": "npm run test:coverage:check",
+    "test:coverage:trend": "npm run test:coverage:trend --workspace=packages/backend",
+    "test:quality-gate": "npm run test:quality-gate --workspace=packages/backend",
     "test:api-consistency": "node tests/api-consistency-check.test.js",
     "check-lines": "npm run format:fix && node ./Scripts/check-lines.js",
     "api:validate": "redocly lint docs/apis/openapi.yaml",
