--- a/Qdrant_Insertor/packages/frontend/tsconfig.json
+++ b/Qdrant_Insertor/packages/frontend/tsconfig.json
@@ -1,5 +1,7 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "composite": true,
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
@@ -15,13 +17,11 @@
     "jsx": "react-jsx",
 
     /* Linting */
-    "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
 
     /* Path mapping */
-    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
       "@/components/*": ["./src/components/*"],
@@ -32,9 +32,10 @@
       "@/types/*": ["./src/types/*"],
       "@/utils/*": ["./src/utils/*"],
       "@shared/*": ["../../shared/*"],
-      "@domain/*": ["../backend/src/domain/*"]
+      "@domain/*": ["../backend/src/domain/*"],
+      "@frontend/*": ["./"]
     }
   },
-  "include": ["src", "../shared"],
+  "include": ["src", "../../shared/types"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
