--- a/Qdrant_Insertor/shared/tsconfig.json
+++ b/Qdrant_Insertor/shared/tsconfig.json
@@ -1,32 +1,21 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
+    "composite": true,
     "target": "ES2020",
     "module": "ESNext",
     "moduleResolution": "bundler",
     "declaration": true,
     "outDir": "./dist",
-    "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "ignoreDeprecations": "5.0",
-    "baseUrl": ".",
     "paths": {
-      "@domain/*": ["../packages/backend/src/domain/*"]
+      "@domain/*": ["../packages/backend/src/domain/*"],
+      "@shared/*": ["./"]
     }
   },
-  "include": [
-    "types/**/*",
-    "utils/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["types/**/*", "utils/**/*", "index.ts"],
+  "exclude": ["node_modules", "dist"]
 }
